# vs-gitignore-bug

./: .gitignore  README.md  Vagrantfile  provision.sh
sub/: CMakeLists.txt  CMakeSettings.json
sub/include/: myclass.h
sub/src/: main.cpp  myclass.cpp
